Styles upon styles!!

--- a/src/template.html
+++ b/src/template.html
@@ -1,9 +1,26 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta keywords="tao of programming, dao of programming, hacker lore" />
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#eeeef0" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#151519" />
+    <meta name="description" content="The Tao of Programming, formatted for the modern web" />
+    <meta property="og:site_name" content="The Tao of Programming" />
+    <meta property="og:title" content="The Tao of Programming" />
+    <meta property="og:description" content="The Tao of Programming, formatted for the modern web" />
+    <meta property="og:locale" content="en_us" />
+    <meta property="og:type" content="article" />
+
     <link rel="stylesheet" type="text/css" href="fonts.css" />
     <link rel="stylesheet" type="text/css" href="styles_upon_styles.css" />
+
+    <title>The Tao of Programming</title>
   </head>
+
+  <!-- Lovingly typset by Ashton Wiersdorf and Alex Larsen. We
+       basically typeset all this by hand, though we did use Pollen
+       (https://docs.racket-lang.org/pollen/) to help us create nice,
+       semantic markup for the document. -->
 
   <body>
     ◊(->html ◊doc)
