--- a/src/template.html
+++ b/src/template.html
@@ -1,20 +1,21 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta keywords="tao of programming, dao of programming, hacker lore" />
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="#eeeef0" />
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#151519" />
-    <meta name="description" content="The Tao of Programming, formatted for the modern web" />
-    <meta property="og:site_name" content="The Tao of Programming" />
-    <meta property="og:title" content="The Tao of Programming" />
-    <meta property="og:description" content="The Tao of Programming, formatted for the modern web" />
     <meta property="og:locale" content="en_us" />
     <meta property="og:type" content="article" />
+
+    <meta property="og:site_name" content="Uncarved Bytes: Hacker Lore" />
+    <meta property="og:title" content="◊(select 'h1 doc)" />
+
+    ◊(->html (metadata) #:splice? #t)
 
     <link rel="stylesheet" type="text/css" href="fonts.css" />
     <link rel="stylesheet" type="text/css" href="styles_upon_styles.css" />
 
-    <title>The Tao of Programming</title>
+    <title>◊(select 'h1 doc)</title>
+
   </head>
 
   <!-- Lovingly typset by Ashton Wiersdorf and Alex Larsen. We
@@ -23,6 +24,28 @@
        semantic markup for the document. -->
 
   <body>
-    ◊(->html ◊doc)
+    <noscript>
+      Hey there—we noticed you have JavaScript disabled. That’s
+      awesome. We don’t like JavaScript either, so this website doesn’t
+      have any. Enjoy!
+    </noscript>
+
+    <main>
+      ◊(->html ◊doc)
+    </main>
+
+    <footer>
+      <nav>
+        <div>
+          ◊when/splice[(previous here)]{<a href="◊(previous here)">Previous</a>}
+        </div>
+        <div>
+          <a href="/index.html">Top</a>
+        </div>
+        <div>
+          ◊when/splice[(next here)]{<a href="◊(next here)">Next</a>}
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
