--- a/src/template.html
+++ b/src/template.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="#eeeef0" />
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#151519" />
     <meta property="og:locale" content="en_us" />
